syntax = "proto3";

option go_package = ".";

service InstrumentsController{

    rpc CloseOutput (request) returns (response){}

    rpc IVSweepMode (sweep_request) returns (stream response){}


}

// name: 
message request {
    string instruments_name = 1;
}

message response {
    string result = 1;
}


message sweep_request {
    float start_volt = 1;
    float volt_step = 2;
    float end_volt = 3;
    float current_cmpl = 4;
    // mes_speed: 0.1 - 10
    float mes_speed = 5;
}

